--- a/editor/ag.css
+++ b/editor/ag.css
@@ -81,9 +81,13 @@ body {
 
 .table tr td{
     margin: 0!important;
-    padding: 2px!important;
+    padding: 10px!important;
     font-size: 12px!important;
     padding-left: 12px!important;
+}
+
+.table tr td:first-child{ 
+    width: 120px;
 }
 
 .form-control{ 
@@ -94,6 +98,11 @@ body {
     padding-left: 5px!important;
 }
 
+.ag-checkbox{
+    height:16px!important;
+}
+
+
 .card{
     border-radius: 0px!important;
 }
@@ -101,3 +110,4 @@ body {
     padding: 0.5rem 1.25rem;   
     font-size: 16px;
 }
+ 
