--- a/editor/ag.css
+++ b/editor/ag.css
@@ -115,12 +115,16 @@ body {
     height:16px!important;
 }
 
-
 .card{
     border-radius: 0px!important;
 }
+
 .card-header {
     padding: 0.5rem 1.25rem;   
     font-size: 16px;
+}
+
+#modal-agcropper .modal-body{
+    min-height: 400px;
 }
  
