--- a/editor/ag.css
+++ b/editor/ag.css
@@ -1,5 +1,6 @@
 html {
     margin-top: 64px;
+    min-width: 1000px;
 }
 
 body {
@@ -17,15 +18,32 @@ body {
 }
 
 #properties-panel {
-    margin: 10px;
     right: 0px;
-    top: 64px;
+    top: 0;
     position: fixed;
     width: 300px;
-    height: 88%;
+    height: 100%;
     min-height: 500px;
-    display: block; 
+    display: block;
     overflow-y: auto;
+    border: 1px solid #ccc;
+    z-index: 9999;
+    background-color: #fff;
+    padding: 0px;
+}
+
+#properties-panel .card{
+    border-radius: 0px!important;
+    border: none;
+}
+
+#properties-panel .card .card-body{
+    padding: 0px;
+}
+
+#properties-panel .card .card-header {
+    padding: 0.5rem 1.25rem;   
+    font-size: 16px;
 }
 
 #preview-input-panel{
@@ -41,9 +59,11 @@ body {
     z-index: 999;
 }
 
-#ageditor {
-    position: relative;
-    margin: 10px;
+
+
+#ageditor .canvas-container{
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .sablon {
@@ -115,16 +135,45 @@ body {
     height:16px!important;
 }
 
-.card{
-    border-radius: 0px!important;
+#modal-agcropper .modal-body{ 
+    padding: 0px!important;
 }
 
-.card-header {
-    padding: 0.5rem 1.25rem;   
-    font-size: 16px;
+#modal-agcropper .modal-body .user-image{ 
+    margin:5px;
+    padding:4px;
+    border:1px solid #ccc;
+    float:left;
+    height:128px;
+    width:auto;
+}
+#modal-agcropper .modal-body .user-image:hover{ 
+    border:2px solid rgb(160, 183, 209);
 }
 
-#modal-agcropper .modal-body{
-    min-height: 400px;
+#modal-agcropper .modal-dialog {
+    width: 100%;
+	min-width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  
+#modal-agcropper .modal-content {
+    height: auto;
+    min-height: 100%;
+    border: 0 none;
+    border-radius: 0;
+}
+
+#modal-agcropper .crop-menu-item{
+    margin-left:10px; 
 }
  
+
+
+
+
+@media (max-width: 1000px){
+    
+}
