--- a/editor/ag.css
+++ b/editor/ag.css
@@ -60,7 +60,6 @@ body {
 }
 
 
-
 #ageditor .canvas-container{
     margin-left: auto;
     margin-right: auto;
@@ -119,7 +118,7 @@ body {
     padding-left: 12px!important;
 }
 
-.table tr td:first-child{ 
+#properties-panel .table tr td:first-child{ 
     width: 120px;
 }
 
