--- a/editor/ag.css
+++ b/editor/ag.css
@@ -138,17 +138,42 @@ body {
     padding: 0px!important;
 }
 
-#modal-agcropper .modal-body .user-image{ 
-    margin:5px;
+#modal-agcropper .modal-body .wrap-user-image .user-image{   
+    height:120px;
+    width:auto;
+}
+#modal-agcropper .modal-body .wrap-user-image .user-image:hover{ 
+    border:2px solid rgb(160, 183, 209);
+}
+
+#modal-agcropper .modal-body .wrap-user-image{ 
+    position: relative;
+    margin:10px;
     padding:4px;
     border:1px solid #ccc;
     float:left;
     height:128px;
     width:auto;
 }
-#modal-agcropper .modal-body .user-image:hover{ 
-    border:2px solid rgb(160, 183, 209);
+
+#modal-agcropper .modal-body .wrap-user-image svg{ 
+    position: absolute;
+    right: -10px;
+    width: 36px;
+    height: auto;
+    color: red;
+    border: 4px solid #ccc;
+    padding: 7px;
+    border-radius: 20px;
+    background-color: cornsilk;
+    top: -10px;
 }
+
+
+#modal-agcropper .modal-body .wrap-user-image svg:hover{  
+    width: 42px;  
+}
+
 
 #modal-agcropper .modal-dialog {
     width: 100%;
