--- a/editor/ag.css
+++ b/editor/ag.css
@@ -125,13 +125,15 @@
     cursor: pointer;
 }
 
-.img-thumbnail {
-    max-width: 64px !important;
-    height: 96px;
-    width: 64px;
+.img-thumbnail {  
+    display: block;
+    width: 120px;
     margin: 10px;
+    margin-top: 20px;
     cursor: pointer;
     position: relative;
+    float: left;
+    padding-bottom: 20px;
 }
 
 .img-thumbnail:hover {
@@ -141,8 +143,6 @@
 .img-thumbnail img {
     display: block;
     padding: 2px !important;
-    border: 1px solid #ccc;
-    max-height: 120px;
     width: 100%;
 }
 
@@ -154,6 +154,13 @@
     bottom: 0;
     text-align: center;
     word-wrap: break-word;
+}
+
+.img-thumbnail i{
+    width: 100%!important;
+    height:100%!important;
+    background-color: transparent;
+    padding-top:0px!important;
 }
 
 .properties{
