--- a/editor/ag.css
+++ b/editor/ag.css
@@ -1,5 +1,5 @@
 .cropper-point{
-    width: 15px!important!important;
+    width: 15px!important;
     height: 15px!important;
     border: 1px solid #fff;
 }
@@ -256,17 +256,24 @@
 }
 
 #modal-agcropper .crop-menu-item{
-    margin-left:0px;
-    padding: 0;
+    /*margin-left:0px;
+    padding: 0;*/
 }
 
 #modal-agcropper .btn-link{ 
+    font-size: 12px;
     color: #2196F3;
+    border: 1px solid #ccc;
+    padding: 5px;
+    margin: 4px;
+    width: fit-content;
+    min-width: 66px;
 }
 
 #modal-agcropper .btn-link i{
-    font-size: 20px;
+    font-size: 16px;
     color: #2196F3;
+    margin-bottom: 0px;
 }
 
 #modal-agcropper .modal-header .close{
@@ -394,7 +401,11 @@
     font-size: 24px;
     cursor: pointer;
 }
-
+ 
+.modal-footer .ag-crop-resim-crop{
+    background-color: #428bca!important;
+    color: #fff!important;
+}
  
 
 
@@ -449,7 +460,6 @@
     height: auto!important;
 }
 
-
 .ag-cart-thum{
     display: none!important;
 }
@@ -468,4 +478,15 @@
      max-height: unset!important; 
      overflow-y: unset!important; 
 }
- 
+
+.ag-settings{
+    float       : right;
+    font-size   : 17px!important;
+    border      : 1px solid #ccc;
+    padding     : 6px;
+    cursor      : pointer;
+}
+
+.ag-settings:hover{
+    background-color: #e2e2e2;
+}
